language-server/src/tests/snapshots/gleam_language_server__tests__document_highlight__highlights_for_private_function.snap
---
source: language-server/src/tests/document_highlight.rs
expression: "\nfn wibble() {\n  wibble()\n}\n\npub fn main() {\n  let _ = wibble()\n  wibble() + 4\n}\n\nfn wobble() {\n  wibble() || wobble()\n}\n"
---
-- app.gleam

fn wibble() {
   ↑▔▔▔▔▔    
  wibble()
  ▔▔▔▔▔▔  
}

pub fn main() {
  let _ = wibble()
          ▔▔▔▔▔▔  
  wibble() + 4
  ▔▔▔▔▔▔      
}

fn wobble() {
  wibble() || wobble()
  ▔▔▔▔▔▔              
}
