language-server/src/tests/snapshots/gleam_language_server__tests__document_highlight__highlights_for_public_function.snap
---
source: language-server/src/tests/document_highlight.rs
expression: "\nimport mod.{wibble}\n\nfn wobble() {\n  mod.wibble()\n}\n\nfn other() {\n  wibble()\n}\n"
---
-- mod.gleam

pub fn wibble() {
  wibble()
}


-- app.gleam

import mod.{wibble}
            ▔▔▔▔▔▔ 

fn wobble() {
  mod.wibble()
      ↑▔▔▔▔▔  
}

fn other() {
  wibble()
  ▔▔▔▔▔▔  
}
