language-server/src/tests/snapshots/gleam_language_server__tests__document_highlight__highlights_for_record_field_ignored_by_record_update_spread.snap
---
source: language-server/src/tests/document_highlight.rs
expression: "\ntype Wibble {\n  Wibble(wibble: Int, wobble: Int)\n}\n\npub fn main(w: Wibble) {\n  Wibble(..w, wibble: 2)\n}\n"
---
-- app.gleam

type Wibble {
  Wibble(wibble: Int, wobble: Int)
                      ↑▔▔▔▔▔      
}

pub fn main(w: Wibble) {
  Wibble(..w, wibble: 2)
}
