language-server/src/tests/snapshots/gleam_language_server__tests__document_highlight__higlights_for_module_select_from_guard.snap
---
source: language-server/src/tests/document_highlight.rs
expression: "\nimport mod\n\npub fn main() {\n  let wibble = True\n  case wibble {\n    True if mod.wibble < 5 -> !wibble\n    False if mod.wibble != 10 -> wibble\n    _ -> mod.wibble + 1\n  }\n}\n"
---
-- mod.gleam
pub const wibble = 10


-- app.gleam

import mod

pub fn main() {
  let wibble = True
  case wibble {
    True if mod.wibble < 5 -> !wibble
                ↑▔▔▔▔▔               
    False if mod.wibble != 10 -> wibble
                 ▔▔▔▔▔▔                
    _ -> mod.wibble + 1
             ▔▔▔▔▔▔    
  }
}
